# os_lab_2019

lab1/src/: average.sh  current.sh  numbers.sh
lab2/src/revert_string/: revert_string.c
lab2/src/swap/: swap.c
lab3/src/: main.c  makefile  parallel_min_max.c
lab4/src/task1/: CMakeLists.txt  find_min_max.c  parallel_min_max.c
lab4/src/task2/: CMakeLists.txt  zombie.c
lab4/src/task3/: process_memory.c
lab4/src/task5/: CMakeLists.txt  parallel_sum.c
lab4/src/task5/sumlib/: CMakeLists.txt  sum.c
lab4/src/task5/sumlib/include/: sum.h
